// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lineGrid renders 0 1`] = `
Array [
  .c0 {
  line-grid: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`lineGrid renders function 1`] = `
Array [
  .c0 {
  line-grid: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: has;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: has;
}

<div
    className="c0"
  />,
]
`;

exports[`lineGrid renders invalid theme path 1`] = `
Array [
  .c0 {
  line-grid: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`lineGrid renders negative number 1`] = `
Array [
  .c0 {
  line-grid: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`lineGrid renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  line-grid: July;
}

@media screen and (min-width:November) {
  .c0 {
    line-grid: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-grid: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  line-grid: July;
}

@media screen and (min-width:November) {
  .c0 {
    line-grid: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-grid: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  line-grid: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-grid: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-grid: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-grid: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-grid: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lineGrid renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    line-grid: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-grid: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    line-grid: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-grid: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-grid: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-grid: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-grid: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-grid: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lineGrid renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  line-grid: July;
}

@media May {
  .c0 {
    line-grid: August;
  }
}

@media April {
  .c0 {
    line-grid: September;
  }
}

@media January {
  .c0 {
    line-grid: November;
  }
}

@media April {
  .c0 {
    line-grid: August;
  }
}

@media June {
  .c0 {
    line-grid: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  line-grid: July;
}

@media May {
  .c0 {
    line-grid: August;
  }
}

@media April {
  .c0 {
    line-grid: September;
  }
}

@media January {
  .c0 {
    line-grid: November;
  }
}

@media April {
  .c0 {
    line-grid: August;
  }
}

@media June {
  .c0 {
    line-grid: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  line-grid: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-grid: November;
  }
}

@media April {
  .c0 {
    line-grid: January;
  }
}

@media January {
  .c0 {
    line-grid: December;
  }
}

@media April {
  .c0 {
    line-grid: April;
  }
}

@media June {
  .c0 {
    line-grid: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-grid: November;
  }
}

@media April {
  .c0 {
    line-grid: January;
  }
}

@media January {
  .c0 {
    line-grid: December;
  }
}

@media April {
  .c0 {
    line-grid: April;
  }
}

@media June {
  .c0 {
    line-grid: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lineGrid renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    line-grid: July;
  }
}

@media April {
  .c0 {
    line-grid: August;
  }
}

@media January {
  .c0 {
    line-grid: September;
  }
}

@media April {
  .c0 {
    line-grid: November;
  }
}

@media June {
  .c0 {
    line-grid: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    line-grid: July;
  }
}

@media April {
  .c0 {
    line-grid: August;
  }
}

@media January {
  .c0 {
    line-grid: September;
  }
}

@media April {
  .c0 {
    line-grid: November;
  }
}

@media June {
  .c0 {
    line-grid: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-grid: January;
  }
}

@media April {
  .c0 {
    line-grid: December;
  }
}

@media January {
  .c0 {
    line-grid: April;
  }
}

@media April {
  .c0 {
    line-grid: May;
  }
}

@media June {
  .c0 {
    line-grid: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-grid: January;
  }
}

@media April {
  .c0 {
    line-grid: December;
  }
}

@media January {
  .c0 {
    line-grid: April;
  }
}

@media April {
  .c0 {
    line-grid: May;
  }
}

@media June {
  .c0 {
    line-grid: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lineGrid renders postitive number 1`] = `
Array [
  .c0 {
  line-grid: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`lineGrid renders string 1`] = `
Array [
  .c0 {
  line-grid: July;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: July;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: June;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: June;
}

<div
    className="c0"
  />,
]
`;

exports[`lineGrid renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`lineGrid renders valid theme path 1`] = `
Array [
  .c0 {
  line-grid: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
